--- a/lambda/package.json
+++ b/lambda/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "s3-file-uploads",
-  "version": "1.0.0",
-  "description": "Upload files to s3 with a pre-signed url",
-  "main": "upload.js",
   "author": "TrussWorks, Inc.",
-  "license": "MIT",
-  "scripts": {
-    "compile": "tsc"
-  },
   "dependencies": {
     "aws-sdk": "^2.712.0"
   },
+  "description": "Upload files to s3 with a pre-signed url",
   "devDependencies": {
     "@types/aws-lambda": "^8.10.64",
     "@types/node": "^14.11.10",
     "typescript": "^4.0.3"
-  }
+  },
+  "license": "MIT",
+  "main": "upload.js",
+  "name": "s3-file-uploads",
+  "scripts": {
+    "compile": "tsc"
+  },
+  "version": "1.0.0"
 }
