--- a/lambda/package.json
+++ b/lambda/package.json
@@ -1,12 +1,14 @@
 {
   "author": "TrussWorks, Inc.",
   "dependencies": {
-    "aws-sdk": "^2.712.0"
+    "aws-sdk": "^2.712.0",
+    "uuid": "^8.3.1"
   },
   "description": "Upload files to s3 with a pre-signed url",
   "devDependencies": {
     "@types/aws-lambda": "^8.10.64",
     "@types/node": "^14.11.10",
+    "@types/uuid": "^8.3.0",
     "typescript": "^4.0.3"
   },
   "license": "MIT",
