--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
-  - repo: git://github.com/pre-commit/pre-commit-hooks
-    rev: v3.2.0
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.4.0
     hooks:
       - id: check-json
       - id: check-merge-conflict
@@ -10,14 +10,34 @@ repos:
         args:
           - --autofix
       - id: trailing-whitespace
+      - id: check-symlinks
+      - id: end-of-file-fixer
+      - id: mixed-line-ending
 
-  - repo: git://github.com/igorshubovych/markdownlint-cli
-    rev: v0.23.2
+  - repo: https://github.com/executablebooks/mdformat
+    rev: 0.7.16
+    hooks:
+      - id: mdformat
+        additional_dependencies:
+          - mdformat-gfm
+          - mdformat-toc
+        # mdformat fights with terraform_docs
+        exclude: README.m(ark)?d(own)?
+
+  - repo: https://github.com/igorshubovych/markdownlint-cli
+    rev: v0.32.2
     hooks:
       - id: markdownlint
 
-  - repo: git://github.com/antonbabenko/pre-commit-terraform
-    rev: v1.43.0
+  - repo: https://github.com/detailyang/pre-commit-shell
+    rev: v1.0.6
+    hooks:
+      - id: shell-lint
+
+  - repo: https://github.com/antonbabenko/pre-commit-terraform
+    rev: v1.77.0
     hooks:
       - id: terraform_docs
+        args:
+          - --args=--config=.terraform-docs.yml
       - id: terraform_fmt
