--- a/renovate.json
+++ b/renovate.json
@@ -1,7 +1,6 @@
 {
   "extends": [
-    "config:base",
-    ":disableDependencyDashboard"
+    "config:base"
   ],
   "labels": [
     "dependencies"
@@ -25,29 +24,8 @@
       "reviewers": [
         "team:waddlers"
       ]
-    },
-    {
-      "automerge": true,
-      "description": "Group minor and patch updates into a single PR",
-      "groupName": "dependencies",
-      "managers": [
-        "terraform",
-        "gomod",
-        "pre-commit",
-        "circleci",
-        "dockerfile",
-        "github-actions"
-      ],
-      "matchUpdateTypes": [
-        "minor",
-        "patch"
-      ]
     }
   ],
-  "postUpdateOptions": [
-    "gomodTidy"
-  ],
-  "prConcurrentLimit": 2,
   "schedule": [
     "every weekend"
   ],
